Update and rename notebook.ipynb to superbowl-halftime-notebook.ipynb
updating file paths and notebook name

--- a/superbowl-halftime-notebook.ipynb
+++ b/superbowl-halftime-notebook.ipynb
@@ -420,9 +420,9 @@
     "import pandas as pd\n",
     "\n",
     "# Load the CSV data into DataFrames\n",
-    "super_bowls = pd.read_csv('datasets/super_bowls.csv')\n",
-    "tv = pd.read_csv('datasets/tv.csv')\n",
-    "halftime_musicians = pd.read_csv('datasets/halftime_musicians.csv')\n",
+    "super_bowls = pd.read_csv('super_bowls.csv')\n",
+    "tv = pd.read_csv('tv.csv')\n",
+    "halftime_musicians = pd.read_csv('halftime_musicians.csv')\n",
     "\n",
     "# Display the first five rows of each DataFrame\n",
     "display(super_bowls.head())\n",
